# easy_logs

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
easy_logging/: __init__.py  _configurations.py  main.py
easy_logs/: __init__.py  _configurations.py  main.py
miskibin/: __init__.py  _logging_utils.py  utils.py
src/miskibin/: __init__.py  utils.py
src/miskibin/_internal_modules/: logging_utils.py
src/miskibin/cn/: __init__.py  _visualize.py
src/miskibin/ml/: __init__.py  _lienar_model.py  lienar_model.py
src/miskibin/utils/: utils.py
tests/miskibin/: test_utils.py
tests/miskibin/ml/: test_linear_model.py
