[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miskibin"
version = "1.0.3"
description = "this is an library with utils for my studies."
readme = "readme.md"
authors = [{ name = "Michał Skibiński", email = "mskibinski109@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "logging.config",
    "PyYaml"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/michalskibinski109/miskibin"
